avoid overlapping headings after line-break

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -547,6 +547,7 @@ div.box-highlight h3:first-child, div.box-dark h3:first-child, div.box-pic h3:fi
 h1, h2, h3, h4, h5, h6 {
 	font-family: Open Sans;
 	z-index: 2;
+	line-height: 100%;
 }
 ul {
 	/*list-style-type: hebrew;*/
